Integrate a Lucene in-memory index instead of my quick one
- Takes a little less time to build the index now
- Stemming becomes easier to implement
- It uses only megabytes for the whole index, instead of the previous gigabyte or so.